// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidingPanel #render() calls onTryingToClose function when provided and closes a panel if it doesn't return false 1`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() calls onTryingToClose function when provided and closes a panel if it doesn't return false 2`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() calls onTryingToClose function when provided via props and prevents closing if it returns false 1`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() calls onTryingToClose function when provided via props and prevents closing if it returns false 2`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() closes the panel when active prop changes to false 1`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() closes the panel when active prop changes to false 2`] = `
<div
  class="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
>
  <div
    class="ui-sliding-panel"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() enables [data-rel="close"] element provided on the children, that closes the overlay 1`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      <button
        data-rel="close"
      >
        Test
      </button>
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() enables [data-rel="close"] element provided on the children, that closes the overlay 2`] = `
<div
  class="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
>
  <div
    class="ui-sliding-panel"
  >
    <div
      class="ui-sliding-panel__content"
    >
      <button
        data-rel="close"
      >
        Test
      </button>
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() opens the panel when active prop changes to true 1`] = `
<div
  class="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
>
  <div
    class="ui-sliding-panel"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() opens the panel when active prop changes to true 2`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() render active by default and when clicking on the overlay it closes it 1`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() render active by default and when clicking on the overlay it closes it 2`] = `
<div
  class="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
>
  <div
    class="ui-sliding-panel"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() render header if title prop is passed 1`] = `
<div
  class="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_test"
  >
    <div
      class="ui-sliding-panel-header"
    >
      <h3
        class="ui-sliding-panel-header__title"
      >
        Test Title
      </h3>
      <button
        class="ui-sliding-panel-header__close-button"
        data-rel="close"
      >
        ×
      </button>
    </div>
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() render with default props and mods provided 1`] = `
<div
  class="ui-sliding-panel-overlay ui-sliding-panel-overlay_hidden"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_test"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() with closeOnOverlayClick=false does not close when overlay clicked 1`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`SlidingPanel #render() with closeOnOverlayClick=false does not close when overlay clicked 2`] = `
<div
  class="ui-sliding-panel-overlay"
>
  <div
    class="ui-sliding-panel ui-sliding-panel_active"
  >
    <div
      class="ui-sliding-panel__content"
    >
      Test
    </div>
  </div>
</div>
`;
